# PBFluids

./: .gitignore  PBFluidsvertexPositions.xyz  README.md
PBFluids/: BowlScene.mb  Cell.cpp  Cell.h  ComplexScene.mb  Grid.cpp  Grid.h  LSystemNode.cpp  LSystemNode.h  MPBFluids.cpp  MPBFluids.h  OpenGLMain.cpp  PBFluids.sln  PBFluids.vcxproj  PBFluids.vcxproj.filters  PBFluidsMel.mel  Particle.cpp  Particle.h  PluginMain.cpp  Register.mel  Render.cpp  Render.h  Scene.h  compositeScene.mb  kernel.cpp  kernel.h  sphere.cpp  sphere.h  testScene.mb
PBFluids/Utils/: Triangle.h  sphere.cpp  sphere.h
PBFluids/wofReleasePURE_v1.13/: README.txt
PBFluids/wofReleasePURE_v1.13/binaries/lib_ubuntu22.04_x86_64/: wof
PBFluids/wofReleasePURE_v1.13/binaries/x64/: wofPURE_x64_v140_Debug.exp  wofPURE_x64_v140_Debug.lib  wofPURE_x64_v140_Release.exp  wofPURE_x64_v140_Release.lib  wofPURE_x64_v141_Debug.exp  wofPURE_x64_v141_Debug.lib  wofPURE_x64_v141_Release.exp  wofPURE_x64_v141_Release.lib  wofPURE_x64_v142_Debug.exp  wofPURE_x64_v142_Debug.lib  (+2 more)
PBFluids/wofReleasePURE_v1.13/data/: Credits.txt  Music_Art_org.ply  letters.stl
PBFluids/wofReleasePURE_v1.13/example/: CMakeLists.txt  Makefile  main.cpp  reconstruct.cpp  remesh.cpp  toCloud.cpp
PBFluids/wofReleasePURE_v1.13/include/: License.h  Mesh.h  Point3.h  TimerC.h  Vector3.h  wof_api.h  wof_api_definitions.h  wof_api_functions.h  wof_api_io.h
PBFluidsGL/: Cell.cpp  Cell.h  Grid.cpp  Grid.h  PBFluidsGL.cpp  PBFluidsGL.sln  PBFluidsGL.vcxproj  PBFluidsGL.vcxproj.filters  Particle.cpp  Particle.h  Render.cpp  Render.h  cpp.hint  kernel.cpp  kernel.h
PBFluidsGL/Debug/: PBFluidsGL.exe.recipe  PBFluidsGL.ilk  PBFluidsGL.vcxproj.FileListAbsolute.txt  vc142.idb
PBFluidsGL/Debug/PBFluidsGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PBFluidsGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PBFluidsGL/x64/Debug/: PBFluidsGL.exe.recipe  vc143.idb
(+7 files in other folders)
